[gd_scene load_steps=24 format=3 uid="uid://bqa8joa6uwyck"]

[ext_resource type="Script" path="res://Scripts/player_controller.gd" id="1_vkbid"]
[ext_resource type="Texture2D" uid="uid://dk2f22p4co8m5" path="res://Assets/Jumps_and_Walk-Sheet.png" id="2_qolw7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhv7x"]
resource_local_to_scene = true
size = Vector2(22, 12)

[sub_resource type="Animation" id="Animation_swb85"]
resource_name = "All_Fours"
length = 0.0666683
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(11, 20), Vector2(11, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0.5, 6), Vector2(0.5, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wurja"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(12, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_kwi1g"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 2), Vector2(0, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 28)]
}

[sub_resource type="Animation" id="Animation_atu54"]
resource_name = "Jumping"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8.5)]
}

[sub_resource type="Animation" id="Animation_b6dg5"]
resource_name = "Jumping_Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 3.5), Vector2(0, 2.5)]
}

[sub_resource type="Animation" id="Animation_fdab5"]
resource_name = "Play_Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 3.5), Vector2(-1, 4)]
}

[sub_resource type="Animation" id="Animation_2bopu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:shape:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(22, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-1, 4)]
}

[sub_resource type="Animation" id="Animation_a3xag"]
resource_name = "Running"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 10), Vector2(0, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tc6ih"]
_data = {
"All_Fours": SubResource("Animation_swb85"),
"Death": SubResource("Animation_wurja"),
"Idle": SubResource("Animation_kwi1g"),
"Jumping": SubResource("Animation_atu54"),
"Jumping_Idle": SubResource("Animation_b6dg5"),
"Play_Dead": SubResource("Animation_fdab5"),
"RESET": SubResource("Animation_2bopu"),
"Running": SubResource("Animation_a3xag")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uqx18"]
animation = &"All_Fours"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5did5"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2uuep"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mj7lx"]
animation = &"Jumping"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w6pru"]
animation = &"Jumping_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m1tyy"]
animation = &"Play_Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hvof8"]
animation = &"Running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cduh8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vt8vv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d0dit"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rrdta"]
states/All_Fours/node = SubResource("AnimationNodeAnimation_uqx18")
states/All_Fours/position = Vector2(761, 60)
states/Death/node = SubResource("AnimationNodeAnimation_5did5")
states/Death/position = Vector2(1031, 187)
states/End/position = Vector2(1192, 187)
states/Idle/node = SubResource("AnimationNodeAnimation_2uuep")
states/Idle/position = Vector2(659, 187)
states/Jumping/node = SubResource("AnimationNodeAnimation_mj7lx")
states/Jumping/position = Vector2(855, 304)
states/Jumping_Idle/node = SubResource("AnimationNodeAnimation_w6pru")
states/Jumping_Idle/position = Vector2(659, 304)
states/Play_Dead/node = SubResource("AnimationNodeAnimation_m1tyy")
states/Play_Dead/position = Vector2(1031, 304)
states/Running/node = SubResource("AnimationNodeAnimation_hvof8")
states/Running/position = Vector2(855, 187)
states/Start/position = Vector2(429, 187)
transitions = ["Idle", "All_Fours", SubResource("AnimationNodeStateMachineTransition_cduh8"), "All_Fours", "Running", SubResource("AnimationNodeStateMachineTransition_vt8vv"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_d0dit")]
graph_offset = Vector2(-67, 156)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_vkbid")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 513
texture = ExtResource("2_qolw7")
hframes = 23
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_hhv7x")

[node name="Node" type="Node" parent="."]

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tc6ih")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tc6ih")
}
tree_root = SubResource("AnimationNodeStateMachine_rrdta")
anim_player = NodePath("../AnimationPlayer")

[node name="Alive Timer" type="Timer" parent="."]

[node name="Dead Timer" type="Timer" parent="."]

[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="Alive Timer" to="." method="_on_alive_timer_timeout"]
[connection signal="timeout" from="Dead Timer" to="." method="_on_dead_timer_timeout"]
